--- a/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
+++ b/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Authors>Matt Scheetz</Authors>
+    <PackageProjectUrl>https://github.com/mscheetz/KuCoinApi.NetCore</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mscheetz/KuCoinApi.NetCore</RepositoryUrl>
+    <PackageTags>kucoin cryptocurrency exchange trading api net core</PackageTags>
+    <Description>Api library for accessing the KuCoin exchange Api</Description>
+    <Copyright>2018 Matt Scheetz</Copyright>
+    <PackageReleaseNotes>Api library for accessing the KuCoin exchange Api</PackageReleaseNotes>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
