--- a/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
+++ b/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
@@ -8,12 +8,14 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net core</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api</Description>
     <Copyright>2018 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Use RESTful Api library, added comments</PackageReleaseNotes>
+    <PackageReleaseNotes>Ability to use config file for api connection credentials</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DateTimeHelpers" Version="1.0.0" />
+    <PackageReference Include="FileRepository" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="RESTApiAccess" Version="1.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
