--- a/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
+++ b/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
@@ -8,9 +8,9 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net core</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api</Description>
     <Copyright>2018 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Utilize reusable projects</PackageReleaseNotes>
+    <PackageReleaseNotes>New initializer</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
