--- a/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
+++ b/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
@@ -8,9 +8,9 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net core bitcoin</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api</Description>
     <Copyright>2018 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Get deposit addresses</PackageReleaseNotes>
+    <PackageReleaseNotes>Withdrawal endpoints plus deposit/withdraw history</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>1.4.1</Version>
+    <Version>1.4.2</Version>
     <PackageLicenseUrl>https://github.com/mscheetz/KuCoinApi.NetCore/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
