--- a/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
+++ b/KuCoinApi.NetCore/KuCoinApi.NetCore/KuCoinApi.NetCore.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="FileRepository" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="RESTApiAccess" Version="1.2.1" />
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
 
   <ItemGroup>
