Cleanup unused members

--- a/KuCoinApi.Net/KuCoinApi.Net.Tests/KuCoinApi.Net.Tests.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net.Tests/KuCoinApi.Net.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KuCoinApi.NetCore\KuCoinApi.NetCore.csproj" />
+    <ProjectReference Include="..\KuCoinApi.Net\KuCoinApi.Net.csproj" />
   </ItemGroup>
 
 </Project>
