--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -3,16 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Matt Scheetz</Authors>
-    <PackageProjectUrl>https://github.com/mscheetz/KuCoinApi.Net</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/mscheetz/KuCoinApi.Net</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/mscheetz/KuCoinApi.Net/tree/v2.0</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mscheetz/KuCoinApi.Net/tree/v2.0</RepositoryUrl>
     <PackageTags>kucoin cryptocurrency exchange trading api net standard bitcoin</PackageTags>
-    <Description>Api library for accessing the KuCoin exchange Api using .Net Standard</Description>
-    <Copyright>2018 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Added get all open order detail response</PackageReleaseNotes>
+    <Description>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</Description>
+    <Copyright>2019 Matt Scheetz</Copyright>
+    <PackageReleaseNotes>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>1.5.7</Version>
-    <PackageLicenseUrl>https://github.com/mscheetz/KuCoinApi.Net/blob/master/LICENSE</PackageLicenseUrl>
+    <Version>0.1.0</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>    
     <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
