--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -8,9 +8,9 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net standard bitcoin</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</Description>
     <Copyright>2019 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Added endpoints: historic orders, get markets, get fiat price</PackageReleaseNotes>
+    <PackageReleaseNotes>Added historic endpoints</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>0.2.0</Version>
+    <Version>0.3.0</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>    
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
