--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -8,7 +8,7 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net standard bitcoin</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</Description>
     <Copyright>2019 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Added historic endpoints</PackageReleaseNotes>
+    <PackageReleaseNotes>Added historic endpoints, websocket bullet calls, updated properties per api documentation</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
     <Version>0.3.0</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>    
