--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -8,13 +8,12 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net standard bitcoin</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</Description>
     <Copyright>2019 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Updated dependency: RESTApiAccess</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed post endpoints</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>0.4.0</Version>
+    <Version>0.4.1</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>    
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/mscheetz/KuCoinApi.Net/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
