--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -8,9 +8,9 @@
     <PackageTags>kucoin cryptocurrency exchange trading api net standard bitcoin</PackageTags>
     <Description>Api library for accessing the KuCoin exchange Api v2.0 using .Net Standard</Description>
     <Copyright>2019 Matt Scheetz</Copyright>
-    <PackageReleaseNotes>Fixed post endpoints</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed enums in calls</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
-    <Version>0.4.1</Version>
+    <Version>0.4.2</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>    
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
