--- a/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
+++ b/KuCoinApi.Net/KuCoinApi.Net/KuCoinApi.Net.csproj
@@ -27,15 +27,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core.Interface\**" />
+    <Compile Remove="Data.Interface\**" />
+    <EmbeddedResource Remove="Core.Interface\**" />
+    <EmbeddedResource Remove="Data.Interface\**" />
+    <None Remove="Core.Interface\**" />
+    <None Remove="Data.Interface\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DateTimeHelpers" Version="1.3.2" />
     <PackageReference Include="FileRepository" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="RESTApiAccess" Version="1.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core.Interface\" />
-    <Folder Include="Data.Interface\" />
   </ItemGroup>
 
 </Project>
